GNOME Bugzilla – Bug 770102
daala: typo related compilation error
Last modified: 2016-08-19 10:48:50 UTC
Created attachment 333575 [details] [review] typo fix in gstdaaladec.c, GST_DEBUG_CATEGIRY_GET is misspelled causing compilation failure.
Comment on attachment 333575 [details] [review] typo fix Thanks, will merge soon :)
commit f5d2309c5b785d61ce1e58f5778dfb52d0fe24ea Author: Philippe Renon <philippe_renon@yahoo.fr> Date: Thu Aug 18 18:55:41 2016 +0200 daala: fix typo related compilation error https://bugzilla.gnome.org/show_bug.cgi?id=770102