daala: fix typo related compilation error

https://bugzilla.gnome.org/show_bug.cgi?id=770102